# secrets

./: .dockerignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: build-docker.yml
templates/: index.html  record.html
